assignment6/code/compiler/SmallCC.java
/* SmallCC.java */
/* Generated By:JavaCC: Do not edit this line. SmallCC.java */
package compiler;

import preprocessor.*;
import java.io.*;

public class SmallCC implements SmallCCConstants {
        public static void main(String args[]) throws Exception
                {
                        compile(args[0]);
                }

        public static void compile(String fileName) throws Exception
        {
                                                File file = new File(fileName);
                                                /*
							line continuations and newline encoding are hard to keep
							track of at tokenization time, so we'll handle them
							directly in the reader
						*/
            Reader sr = new FileReader(file) {
                                                        private int[] lookahead = {-1, -1};
                                                        public int read() throws IOException {
                                                                if (lookahead[0] >= 0) {
                                                                        int ch = lookahead[0];
                                                                        lookahead[0] = lookahead[1];
                                                                        lookahead[1] = -1;
                                                                        return ch;
                                                                }
                                                                int ch = super.read();
                                                                //possible line continuation
                                                                if (ch == '\u005c\u005c') {
                                                                        lookahead[0] = super.read();

                                                                        if (lookahead[0] == '\u005cr') {
                                                                                //the user is using windows, what a loser :P
                                                                                lookahead[1] = super.read();
                                                                                if (lookahead[1] != '\u005cn') {
                                                                                        //carriage return with no line feed, what's going on?
                                            // maybe we are printing a bold character or an underline
                                                                                        return ch;
                                                                                } else {
                                                                                        lookahead[0] = '\u005cn';
                                                                                }
                                                                        }
                                                                        if (lookahead[0] == '\u005cn') {
                                                                                lookahead[0] = lookahead[1] = -1;
                                                                                do {
                                                                                        ch = super.read();
                                                                                        if (ch < 0) return ch;
                                                                                } while(Character.isWhitespace((char) ch));
                                                                                return ch;
                                                                        }
                                                                } else if (ch == '\u005cr') {
                                                                        lookahead[0] = super.read();
                                                                        if (lookahead[0] == '\u005cn') {
                                                                                lookahead[0] = lookahead[1] = -1;
                                                                                return '\u005cn';
                                                                        }
                                                                }
                                                                return ch;
                                                        }

                                                        public int read(char[] cbuf, int offset, int length) throws IOException{
                                                                int read = 0;
                                                                while (read < length && offset + read < cbuf.length) {
                                                                        int ch = read();
                                                                        if (ch < 0) break;
                                                                        cbuf[offset + (read++)] = (char) ch;
                                                                }
                                                                if (read == 0 && read < length) return -1;
                                                                return read;
                                                        }
            };
            SmallCC parser = new SmallCC(sr);

            try {
                parser.Tokens();
            }
                catch (ParseException ex) {
                ex.printStackTrace();
            }
        }

/** Main production. */
  static final public 
void BareType() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CHAR:{
      jj_consume_token(CHAR);
      break;
      }
    case INT:{
      jj_consume_token(INT);
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Type() throws ParseException {
    BareType();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case STAR:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      Star();
    }
  }

  static final public void VariableDeclaration() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CHAR:
    case INT:{
      BareType();
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case STAR:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      Star();
    }
    Identifier();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 60:{
      jj_consume_token(60);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUMBER:{
        Number();
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      jj_consume_token(61);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EQUALS:{
      Equals();
      Expression();
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 62:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      jj_consume_token(62);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case STAR:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_4;
        }
        Star();
      }
      Identifier();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 60:{
        jj_consume_token(60);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NUMBER:{
          Number();
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          ;
        }
        jj_consume_token(61);
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQUALS:{
        Equals();
        Expression();
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        ;
      }
    }
    jj_consume_token(SEMI_COLON);
  }

  static final public void FunctionDeclaration() throws ParseException {
    Type();
    Identifier();
    jj_consume_token(L_PAREN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CHAR:
    case INT:
    case IDENTIFIER:{
      FunctionDeclarationParameter();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 62:{
          ;
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          break label_5;
        }
        jj_consume_token(62);
        FunctionDeclarationParameter();
      }
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    jj_consume_token(R_PAREN);
    jj_consume_token(SEMI_COLON);
  }

  static final public void FunctionDeclarationParameter() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CHAR:
    case INT:{
      Type();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        Identifier();
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      break;
      }
    case IDENTIFIER:{
      Identifier();
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 60:{
      jj_consume_token(60);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SIZEOF:
      case PLUS_PLUS:
      case MINUS_MINUS:
      case PLUS:
      case MINUS:
      case STAR:
      case BIT_AND:
      case BIT_NOT:
      case BOOLEAN_NOT:
      case L_PAREN:
      case IDENTIFIER:
      case NUMBER:
      case STRING_LIT:
      case CHARACTER_CONST:{
        Expression();
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      jj_consume_token(61);
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      ;
    }
  }

  static final public void FunctionDefinition() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CHAR:
    case INT:{
      Type();
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      ;
    }
    Identifier();
    jj_consume_token(L_PAREN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CHAR:
    case INT:
    case IDENTIFIER:{
      FunctionDefinitionParameter();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 62:{
          ;
          break;
          }
        default:
          jj_la1[19] = jj_gen;
          break label_6;
        }
        jj_consume_token(62);
        FunctionDefinitionParameter();
      }
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      ;
    }
    jj_consume_token(R_PAREN);
    jj_consume_token(63);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BREAK:
      case CHAR:
      case CONTINUE:
      case DO:
      case FOR:
      case GOTO:
      case IF:
      case INT:
      case RETURN:
      case SIZEOF:
      case SWITCH:
      case WHILE:
      case SEMI_COLON:
      case PLUS_PLUS:
      case MINUS_MINUS:
      case PLUS:
      case MINUS:
      case STAR:
      case BIT_AND:
      case BIT_NOT:
      case BOOLEAN_NOT:
      case L_PAREN:
      case IDENTIFIER:
      case NUMBER:
      case STRING_LIT:
      case CHARACTER_CONST:
      case 63:{
        ;
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CHAR:
      case INT:
      case STAR:
      case IDENTIFIER:{
        VariableDeclaration();
        break;
        }
      case BREAK:
      case CONTINUE:
      case DO:
      case FOR:
      case GOTO:
      case IF:
      case RETURN:
      case SIZEOF:
      case SWITCH:
      case WHILE:
      case SEMI_COLON:
      case PLUS_PLUS:
      case MINUS_MINUS:
      case PLUS:
      case MINUS:
      case BIT_AND:
      case BIT_NOT:
      case BOOLEAN_NOT:
      case L_PAREN:
      case NUMBER:
      case STRING_LIT:
      case CHARACTER_CONST:
      case 63:{
        Statement();
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(64);
  }

  static final public void FunctionDefinitionParameter() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CHAR:
    case INT:{
      Type();
      break;
      }
    default:
      jj_la1[23] = jj_gen;
      ;
    }
    Identifier();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 60:{
      jj_consume_token(60);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SIZEOF:
      case PLUS_PLUS:
      case MINUS_MINUS:
      case PLUS:
      case MINUS:
      case STAR:
      case BIT_AND:
      case BIT_NOT:
      case BOOLEAN_NOT:
      case L_PAREN:
      case IDENTIFIER:
      case NUMBER:
      case STRING_LIT:
      case CHARACTER_CONST:{
        Expression();
        break;
        }
      default:
        jj_la1[24] = jj_gen;
        ;
      }
      jj_consume_token(61);
      break;
      }
    default:
      jj_la1[25] = jj_gen;
      ;
    }
  }

  static final public void Statement() throws ParseException {
    if (jj_2_2(2)) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SIZEOF:
      case PLUS_PLUS:
      case MINUS_MINUS:
      case PLUS:
      case MINUS:
      case STAR:
      case BIT_AND:
      case BIT_NOT:
      case BOOLEAN_NOT:
      case L_PAREN:
      case IDENTIFIER:
      case NUMBER:
      case STRING_LIT:
      case CHARACTER_CONST:{
        Expression();
        break;
        }
      default:
        jj_la1[26] = jj_gen;
        ;
      }
      jj_consume_token(SEMI_COLON);
System.out.println(" found statement");
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 63:{
        jj_consume_token(63);
        label_8:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case BREAK:
          case CHAR:
          case CONTINUE:
          case DO:
          case FOR:
          case GOTO:
          case IF:
          case INT:
          case RETURN:
          case SIZEOF:
          case SWITCH:
          case WHILE:
          case SEMI_COLON:
          case PLUS_PLUS:
          case MINUS_MINUS:
          case PLUS:
          case MINUS:
          case STAR:
          case BIT_AND:
          case BIT_NOT:
          case BOOLEAN_NOT:
          case L_PAREN:
          case IDENTIFIER:
          case NUMBER:
          case STRING_LIT:
          case CHARACTER_CONST:
          case 63:{
            ;
            break;
            }
          default:
            jj_la1[27] = jj_gen;
            break label_8;
          }
          if (jj_2_1(2)) {
            VariableDeclaration();
          } else {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case BREAK:
            case CONTINUE:
            case DO:
            case FOR:
            case GOTO:
            case IF:
            case RETURN:
            case SIZEOF:
            case SWITCH:
            case WHILE:
            case SEMI_COLON:
            case PLUS_PLUS:
            case MINUS_MINUS:
            case PLUS:
            case MINUS:
            case STAR:
            case BIT_AND:
            case BIT_NOT:
            case BOOLEAN_NOT:
            case L_PAREN:
            case IDENTIFIER:
            case NUMBER:
            case STRING_LIT:
            case CHARACTER_CONST:
            case 63:{
              Statement();
              break;
              }
            default:
              jj_la1[28] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
        jj_consume_token(64);
        break;
        }
      case IF:
      case WHILE:{
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IF:{
          jj_consume_token(IF);
          break;
          }
        case WHILE:{
          jj_consume_token(WHILE);
          break;
          }
        default:
          jj_la1[29] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(L_PAREN);
        Expression();
        jj_consume_token(R_PAREN);
        Statement();
System.out.println(" found if statement");
        break;
        }
      case FOR:{
        jj_consume_token(FOR);
        jj_consume_token(L_PAREN);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SIZEOF:
        case PLUS_PLUS:
        case MINUS_MINUS:
        case PLUS:
        case MINUS:
        case STAR:
        case BIT_AND:
        case BIT_NOT:
        case BOOLEAN_NOT:
        case L_PAREN:
        case IDENTIFIER:
        case NUMBER:
        case STRING_LIT:
        case CHARACTER_CONST:{
          Expression();
          break;
          }
        default:
          jj_la1[30] = jj_gen;
          ;
        }
        jj_consume_token(SEMI_COLON);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SIZEOF:
        case PLUS_PLUS:
        case MINUS_MINUS:
        case PLUS:
        case MINUS:
        case STAR:
        case BIT_AND:
        case BIT_NOT:
        case BOOLEAN_NOT:
        case L_PAREN:
        case IDENTIFIER:
        case NUMBER:
        case STRING_LIT:
        case CHARACTER_CONST:{
          Expression();
          break;
          }
        default:
          jj_la1[31] = jj_gen;
          ;
        }
        jj_consume_token(SEMI_COLON);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SIZEOF:
        case PLUS_PLUS:
        case MINUS_MINUS:
        case PLUS:
        case MINUS:
        case STAR:
        case BIT_AND:
        case BIT_NOT:
        case BOOLEAN_NOT:
        case L_PAREN:
        case IDENTIFIER:
        case NUMBER:
        case STRING_LIT:
        case CHARACTER_CONST:{
          Expression();
          break;
          }
        default:
          jj_la1[32] = jj_gen;
          ;
        }
        jj_consume_token(R_PAREN);
        Statement();
System.out.println(" found for statement");
        break;
        }
      case DO:{
        jj_consume_token(DO);
        Statement();
        jj_consume_token(WHILE);
        jj_consume_token(L_PAREN);
        Expression();
        jj_consume_token(R_PAREN);
        jj_consume_token(SEMI_COLON);
System.out.println(" found do while statement");
        break;
        }
      case SWITCH:{
        jj_consume_token(SWITCH);
        jj_consume_token(L_PAREN);
        Expression();
        jj_consume_token(R_PAREN);
        jj_consume_token(63);
        label_9:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case CHAR:
          case INT:
          case STAR:
          case IDENTIFIER:{
            ;
            break;
            }
          default:
            jj_la1[33] = jj_gen;
            break label_9;
          }
          VariableDeclaration();
        }
        label_10:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case BREAK:
          case CASE:
          case CONTINUE:
          case _DEFAULT:
          case DO:
          case FOR:
          case GOTO:
          case IF:
          case RETURN:
          case SIZEOF:
          case SWITCH:
          case WHILE:
          case SEMI_COLON:
          case PLUS_PLUS:
          case MINUS_MINUS:
          case PLUS:
          case MINUS:
          case STAR:
          case BIT_AND:
          case BIT_NOT:
          case BOOLEAN_NOT:
          case L_PAREN:
          case IDENTIFIER:
          case NUMBER:
          case STRING_LIT:
          case CHARACTER_CONST:
          case 63:{
            ;
            break;
            }
          default:
            jj_la1[34] = jj_gen;
            break label_10;
          }
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case CASE:
          case _DEFAULT:{
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case CASE:{
              jj_consume_token(CASE);
              Expression();
              jj_consume_token(65);
              break;
              }
            case _DEFAULT:{
              jj_consume_token(_DEFAULT);
              jj_consume_token(65);
              break;
              }
            default:
              jj_la1[35] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
            break;
            }
          default:
            jj_la1[36] = jj_gen;
            ;
          }
          Statement();
        }
        jj_consume_token(64);
System.out.println(" found switch statement");
        break;
        }
      case BREAK:{
        jj_consume_token(BREAK);
        jj_consume_token(SEMI_COLON);
System.out.println(" found break statement");
        break;
        }
      case CONTINUE:{
        jj_consume_token(CONTINUE);
        jj_consume_token(SEMI_COLON);
System.out.println(" found continue statement");
        break;
        }
      case RETURN:{
        jj_consume_token(RETURN);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SIZEOF:
        case PLUS_PLUS:
        case MINUS_MINUS:
        case PLUS:
        case MINUS:
        case STAR:
        case BIT_AND:
        case BIT_NOT:
        case BOOLEAN_NOT:
        case L_PAREN:
        case IDENTIFIER:
        case NUMBER:
        case STRING_LIT:
        case CHARACTER_CONST:{
          Expression();
          break;
          }
        default:
          jj_la1[37] = jj_gen;
          ;
        }
        jj_consume_token(SEMI_COLON);
System.out.println(" found return statement");
        break;
        }
      case IDENTIFIER:{
        Identifier();
        jj_consume_token(65);
        Statement();
System.out.println(" found label statement");
        break;
        }
      case GOTO:{
        jj_consume_token(GOTO);
        Identifier();
        jj_consume_token(SEMI_COLON);
System.out.println(" found goto statement");
        break;
        }
      default:
        jj_la1[38] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/** Left-to-right*/
  static final public void Expression() throws ParseException {
    AssignmentExpression();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 62:{
        ;
        break;
        }
      default:
        jj_la1[39] = jj_gen;
        break label_11;
      }
      jj_consume_token(62);
      AssignmentExpression();
    }
System.out.println(" found expression");
  }
